src/Pages/Packages/style.less
// todo: some common classes like: .PageFlex .PageFlex_Item .PageFlex__Item_rounded
// todo: refact styles
@import "../../Assets/Variables.less";
@import "../../Assets/Mixins.less";

.PagePackages {
  display: block;
  column-count: 2;
  column-gap: 20px;
  gap: 20px;
  align-items: start;

  @media (max-width: 600px) {
    column-count: 1;
  }
}

.PagePackages__Item {
  border-radius: 8px;
  background-color: rgba(255,255,255,1);
  transition: background-color .3s linear;
  margin-bottom: 20px;

  break-inside: avoid;
  page-break-inside: avoid;
  
  display: inline-block;
  width: 100%;
  box-sizing: border-box;

  &:hover {
    background-color: @color-dark-hover;
  }
  &_more {
    display: block;
    padding: 15px;
    // background: rgba(255,255,255,0.04);
    border-radius: 8px;
    white-space: nowrap;

    // TODO: class or mixin
    &:hover {
     .barberpole-animation();
    }
  }
  > .toggle_info {
    cursor: pointer;
    margin-top: 2px;
    display: flex;
    align-items: center;
    justify-content: flex-start;
  }
  .Package__Badges {
    margin-top: 7px;
    &__Item {
      margin-right: 4px;
    }
  }
}

.PagePackages__Item_more {
  margin-bottom: 12px;
  display: flex;
  align-items: center;

  > svg {
    margin-left: 5px;
  }
}

@media (max-width: @mobile-width) {
  .PagePackages__Item_more {
    margin-left: 0;
  }
}

